-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
565a7827bb2a7c7af23eade8f3c8809c72f81251
When using Text.StyledText format in the Text element in QML, a QTextLayout with additional formats is used as the back-end. Currently, SceneGraph does not support color changes in this code path, and that needs to be implemented.
For Gerrit Dashboard: QTBUG-21199 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
3982,1 | Support font color with Text.StyledText in SceneGraph | refactor | qt/qtdeclarative | Status: MERGED | +2 | 0 |