Support font color with Text.StyledText in SceneGraph

When Text.StyledText is set as format, QML will use a QTextLayout
back-end with additional formats to render styled text, supporting
a few HTML tags. To support color changes using this format, we
need to process the additional formats in the text node. The code
that fetches glyph runs is now separated into its own function and
is called once per color-changing format if any such exist.

Task-number: QTBUG-21199
Change-Id: Ib9b0cbec8d23de2dfafae9f641a2e3f7819c6a7a
Reviewed-on: http://codereview.qt.nokia.com/3982
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Jiang Jiang <jiang.jiang@nokia.com>